chore: :lipstick: Add commitizen and conventional-changelog adapter to project
... for better formatted commited messages!

--- a/package.json
+++ b/package.json
@@ -30,5 +30,10 @@
   },
   "jest": {
     "testEnvironment": "node"
+  },
+  "config": {
+    "commitizen": {
+      "path": "cz-conventional-changelog"
+    }
   }
 }
