--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,8 @@ language: node_js
 node_js:
   - "7"
   - "6"
-  - "5"
-  - "4"
 cache:
   directories:
     - "node_modules"
+notifications:
+  email: false
