--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "Node.js wrapper for the YTS API.",
   "main": "./lib/nyts",
   "scripts": {
-    "test": "jest",
-    "precommit": "lint-staged"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -24,15 +23,10 @@
   },
   "homepage": "https://github.com/yeskunall/nyts#readme",
   "devDependencies": {
-    "babel-preset-env": "1.5.2",
     "eslint": "^4.0.0",
     "eslint-config-airbnb-base": "^11.2.0",
     "eslint-plugin-import": "^2.3.0",
-    "gulp": "3.9.1",
-    "gulp-babel": "6.1.2",
-    "husky": "^0.13.4",
-    "jest-cli": "^20.0.4",
-    "lint-staged": "^3.6.1"
+    "jest-cli": "^20.0.4"
   },
   "jest": {
     "testEnvironment": "node"
@@ -41,11 +35,5 @@
     "commitizen": {
       "path": "cz-conventional-changelog"
     }
-  },
-  "lint-staged": {
-    "*.js": [
-      "prettier --write",
-      "git add"
-    ]
   }
 }
