--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
   },
   "lint-staged": {
     "*.js": [
-      "prettier --write",
+      "prettier --write --trailing-comma all",
       "git add"
     ]
   }
