--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
   },
   "lint-staged": {
     "*.js": [
-      "prettier --write --trailing-comma all",
+      "prettier --write --trailing-comma all --single-quote true",
       "git add"
     ]
   }
