--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "husky": "^0.14.0",
     "jest-cli": "^20.0.4",
     "lint-staged": "^4.0.0",
-    "prettier": "^1.4.4"
+    "prettier": "^1.4.4",
+    "rimraf": "^2.6.1"
   },
   "jest": {
     "testEnvironment": "node"
