--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nyts",
-  "version": "0.0.6",
+  "version": "0.1.0",
   "description": "Node.js wrapper for the YTS API.",
   "main": "./lib/nyts",
   "scripts": {
@@ -24,17 +24,14 @@
   },
   "homepage": "https://github.com/yeskunall/nyts#readme",
   "devDependencies": {
-    "babel-preset-env": "1.6.0",
     "eslint": "^4.0.0",
     "eslint-config-airbnb-base": "^11.2.0",
     "eslint-plugin-import": "^2.3.0",
-    "gulp": "3.9.1",
-    "gulp-babel": "6.1.2",
     "husky": "^0.14.0",
     "jest-cli": "^20.0.4",
     "lint-staged": "^4.0.0",
-    "prettier": "^1.4.4",
-    "rimraf": "^2.6.1"
+    "nock": "^9.0.28",
+    "prettier": "^1.4.4"
   },
   "jest": {
     "testEnvironment": "node"
